Fixes sign-up button

--- a/index.html
+++ b/index.html
@@ -1,186 +1,189 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Tech Job Academy</title>
-      <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
-      <script src="./javascript/main.js" type="text/javascript" charset="utf-8"></script>
-      <link href="./stylesheets/style.css" rel="stylesheet">
-      <link href='http://fonts.googleapis.com/css?family=Roboto:500,400,300' rel='stylesheet' type='text/css'>
-    </head>
-    <body>
-      <header>
-        <div class="nav-bar">
-          <div class="logo">
-            <a href="#home" class="moveTo" title="TJA"><p>TJA | Tech Jobs Academy</p></a>
-          </div>
-          <nav>
-            <ul>
-              <li><a href="#overview" class="moveTo" title="OVERVIEW">OVERVIEW</a></li>
-              <li><a href="#curriculum" class="moveTo" title="CURRICULUM">CURRICULUM</a></li>
-              <li><a href="#application" class="moveTo" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
-              <li><a href="#key-dates" class="moveTo" title="KEY DATES">KEY DATES</a></li>
-            </ul>
-          </nav>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tech Job Academy</title>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
+    <script src="./javascript/main.js" type="text/javascript" charset="utf-8"></script>
+    <link href="./stylesheets/style.css" rel="stylesheet">
+    <link
+    href='http://fonts.googleapis.com/css?family=Roboto:900,500,400,300,100' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <header>
+      <div class="nav-bar">
+        <div class="logo">
+          <a href="#home" class="moveTo" title="TJA"><p>TJA | Tech Jobs Academy</p></a>
         </div>
-        <div class="hero" id="home">
-          <div class="layer"></div>
-          <div class="hero-blurb">
-            <h1>Tech Jobs Academy</h1>
-            <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
-            <button class="long-button"><a href="#" title="APPLY">APPLY</a></button>
+        <nav>
+          <ul>
+            <li><a href="#overview" class="moveTo" title="OVERVIEW">OVERVIEW</a></li>
+            <li><a href="#curriculum" class="moveTo" title="CURRICULUM">CURRICULUM</a></li>
+            <li><a href="#application" class="moveTo" title="APPLICATION PROCESS">APPLICATION PROCESS</a></li>
+            <li><a href="#key-dates" class="moveTo" title="KEY DATES">KEY DATES</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="hero" id="home">
+        <div class="layer"></div>
+        <div class="hero-blurb">
+          <h1>Tech Jobs Academy</h1>
+          <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
+          <button class="long-button"><a href="#" title="APPLY">APPLY</a></button>
         </div>
       </div>
-      </header>
-      <section class="overview" id="overview">
-        <h2>OVERVIEW</h2>
-        <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
-        <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
-        <div class="curriculum-blurbs">
-          <div class="image-blurb">
-            <img src="./images/calendar.jpg"><h3>Oct5th- Feb16th</h3>
-            <p>9AM-5PM</p>
-          </div>
-          <div class="image-blurb">
-            <div class="icon">25</div>
-            <h3>Open Seats</h3>
-            <p>avialable</p>
-          </div>
-          <div class="image-blurb">
-            <div class="icon"><span class="dollar">$</span>0</div>
-            <h3>free</h3>
-            <p>Tuition</p>
-          </div>
-          <div class="image-blurb">
-            <img src="./images/location.jpg"><h3>Address</h3>
-            <p>300 Jay Street</p>
-          </div>
+    </header>
+    <section class="overview" id="overview">
+      <h2>OVERVIEW</h2>
+      <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
+      <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
+      <div class="curriculum-blurbs">
+        <div class="image-blurb">
+          <img src="./images/calendar.jpg"><h3>Oct5th- Feb16th</h3>
+          <p>9AM-5PM</p>
         </div>
-          <div class="mail-signup">
-            <!-- Begin MailChimp Signup Form -->
-            <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-            <style type="text/css">
-              #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:400px;}
-              /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-              We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-            </style>
-            <div id="mc_embed_signup">
-              <form action="//github.us11.list-manage.com/subscribe/post?u=7b0ad64534cbb723ba1449cff&amp;id=b7740812a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <div id="mc_embed_signup_scroll">
-                  <label for="mce-EMAIL">Sign up to get updates on Tech Jobs Academy.</label>
-                  <div id="input-box">
-                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_7b0ad64534cbb723ba1449cff_b7740812a4" tabindex="-1" value=""></div>
-                    <div class="clear"><input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="short-button"></div>
-                  </div>
-                </div>
-              </form>
+        <div class="image-blurb">
+          <div class="icon">25</div>
+          <h3>Open Seats</h3>
+          <p>avialable</p>
+        </div>
+        <div class="image-blurb">
+          <div class="icon"><span class="dollar">$</span>0</div>
+          <h3>free</h3>
+          <p>Tuition</p>
+        </div>
+        <div class="image-blurb">
+          <img src="./images/location.jpg"><h3>Address</h3>
+          <p>300 Jay Street</p>
+        </div>
+      </div>
+      <div class="mail-signup">
+        <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+          #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:400px;}
+          /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+          We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+          <form action="//github.us11.list-manage.com/subscribe/post?u=7b0ad64534cbb723ba1449cff&amp;id=b7740812a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <label for="mce-EMAIL">Sign up to get updates on Tech Jobs Academy.</label>
+              <div id="input-box">
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_7b0ad64534cbb723ba1449cff_b7740812a4" tabindex="-1" value=""></div>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <span class="clear">
+                  <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="short-button">
+                </span>
+              </div>
             </div>
-          </div> 
-      </section>
+          </form>
+        </div>
+      </div>
+    </section>
 
-      <section class="curriculum" id="curriculum">
-        <h2>CURRICULUM</h2>
-        <div class="curriculum-blurbs">
-          <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 1</h3>
-            <p>Info blub</p>
-          </div>
-           <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 2</h3>
-            <p>Info blub</p>
-          </div>
-          <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 3</h3>
-            <p>Info blub</p>
-          </div>
-          <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 4</h3>
-            <p>Info blub</p>
-          </div>
-          <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 5</h3>
-            <p>Info blub</p>
-          </div>
-          <div class="image-blurb">
-            <img src="http://placehold.it/140x100"><h3>Curriculum Info 6</h3>
-            <p>Info blub</p>  
-          </div>
+    <section class="curriculum" id="curriculum">
+      <h2>CURRICULUM</h2>
+      <div class="curriculum-blurbs">
+        <div class="image-blurb">
+          <img src="http://placehold.it/140x100"><h3>Curriculum Info 1</h3>
+          <p>Info blub</p>
         </div>
-      </section>
+        <div class="image-blurb">
+          <img src="http://placehold.it/140x100"><h3>Curriculum Info 2</h3>
+          <p>Info blub</p>
+        </div>
+        <div class="image-blurb">
+          <img src="http://placehold.it/140x100"><h3>Curriculum Info 3</h3>
+          <p>Info blub</p>
+        </div>
+        <div class="image-blurb">
+          <img src="http://placehold.it/140x100"><h3>Curriculum Info 4</h3>
+          <p>Info blub</p>
+        </div>
+        <div class="image-blurb">
+          <img src="http://placehold.it/140x100"><h3>Curriculum Info 5</h3>
+          <p>Info blub</p>
+        </div>
+        <div class="image-blurb">
+          <img src="http://placehold.it/140x100"><h3>Curriculum Info 6</h3>
+          <p>Info blub</p>  
+        </div>
+      </div>
+    </section>
 
-      <section class="application" id="application">
-        <h2>APPLICATION PROCESS</h2>
-        <div class="curriculum-blurbs">
-          <div class="application-steps">
-            <ol>
-              <li>
-                <h3>Check your eligibility</h3>
-                <p>Do you meet the following criteria?</p>
-              </li>
-              <li>
-                <h3>Fill out application form</h3>
-                <p>The application helps us get to know you better. Answer questions about your interest in technology and what gets you excited about the program.</p>
-              </li>
-              <li>
-                <h3>Take assessment</h3>
-                <p>Learn the fundamentals of networking and take this online entrance assessment to prove your knowledge.</p>
-              </li>
-              <li>
-                <h3>Interview</h3>
-                <p>Selected candidates will be invited to interview for a spot in the cohort.</p>
-              </li>
-            </ol>
-          </div>
-          <div class="eligibility">
-            <h3>Eligibility Requirements</h3>
-            <ul>
-              <li>at least 18 years old</li>
-              <li>less than $50K salary</li>
-              <li>less than a 4-year degree</li>
-              <li>NYC resident</li>
-              <li>meet all federal selective service requirements</li>
-            </ul>
-            <p>Selective service link for information about selective service</p>
-            <div class="apply-button">
-              <button class="long-button"><a href="#" title="APPLY">APPLY</a></button> 
-            </div>
+    <section class="application" id="application">
+      <h2>APPLICATION PROCESS</h2>
+      <div class="curriculum-blurbs">
+        <div class="application-steps">
+          <ol>
+            <li>
+              <h3>Check your eligibility</h3>
+              <p>Do you meet the following criteria?</p>
+            </li>
+            <li>
+              <h3>Fill out application form</h3>
+              <p>The application helps us get to know you better. Answer questions about your interest in technology and what gets you excited about the program.</p>
+            </li>
+            <li>
+              <h3>Take assessment</h3>
+              <p>Learn the fundamentals of networking and take this online entrance assessment to prove your knowledge.</p>
+            </li>
+            <li>
+              <h3>Interview</h3>
+              <p>Selected candidates will be invited to interview for a spot in the cohort.</p>
+            </li>
+          </ol>
+        </div>
+        <div class="eligibility">
+          <h3>Eligibility Requirements</h3>
+          <ul>
+            <li>at least 18 years old</li>
+            <li>less than $50K salary</li>
+            <li>less than a 4-year degree</li>
+            <li>NYC resident</li>
+            <li>meet all federal selective service requirements</li>
+          </ul>
+          <p>Selective service link for information about selective service</p>
+          <div class="apply-button">
+            <button class="long-button"><a href="#" title="APPLY">APPLY</a></button> 
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="key-dates" id="key-dates">
-        <div class="line">
+    <section class="key-dates" id="key-dates">
+      <div class="line">
+      </div>
+      <div class="timeline">
+        <h2>KEY DATES</h2>
+        <div class="key-date" id="dot1">
+          <h3>Application Open</h3>
+          <h4>JULY 24</h4>
         </div>
-        <div class="timeline">
-          <h2>KEY DATES</h2>
-          <div class="key-date" id="dot1">
-            <h3>Application Open</h3>
-            <h4>JULY 24</h4>
-          </div>
-          <div class="key-date" id="dot2">
-            <h3>Info Session</h3>
-            <h4>AUGUST 8</h4>
-          </div>
-          <div class="key-date" id="dot3">
-            <h3>Application Close</h3>
-            <h4>AUGUST 28</h4>
-          </div>
-          <div class="key-date" id="dot4">
-            <h3>Class Start</h3>
-            <h4>OCTOBER 5</h4>
-          </div>
+        <div class="key-date" id="dot2">
+          <h3>Info Session</h3>
+          <h4>AUGUST 8</h4>
         </div>
-      </section>
-      <footer>
+        <div class="key-date" id="dot3">
+          <h3>Application Close</h3>
+          <h4>AUGUST 28</h4>
+        </div>
+        <div class="key-date" id="dot4">
+          <h3>Class Start</h3>
+          <h4>OCTOBER 5</h4>
+        </div>
+      </div>
+    </section>
+    <footer>
       <h2>PARTNERS</h2>
       <div class="partner-logos">
         <a href="#" title="CUNY City Tech"><img src="./images/msr.jpg"></a>
         <a href="#" title="Microsoft"><img src="./images/cuny.jpg"></a>
         <a href="#" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
       </div>
-      </footer>
-    </body>
-  </html>
+    </footer>
+  </body>
+</html>
