Styles mobile and desktop, increases font

--- a/index.html
+++ b/index.html
@@ -28,33 +28,43 @@
       <div class="hero" id="home">
         <div class="hero-blurb">
           <h1>Tech Jobs Academy</h1>
-          <p>An intensive, 16-week techincal training program preparing underemployed and unemployed NYC resident for in-demand tech jobs.</p>
+          <p>An intensive, 16-week technical training program preparing
+            underemployed and unemployed NYC residents for in-demand tech jobs.</p>
           <button class="long-button"><a href="#" title="APPLY">APPLY</a></button>
         </div>
       </div>
     </header>
     <section class="overview" id="overview">
       <h2>OVERVIEW</h2>
-      <p>Tech Jobs Academy is a public-private partnership between Microsoft, CUNY's City Tech, and the Tech Talent Pipline. This technical training program targets passionate underemployed and unemployed NYC resident ready to launch a new tech career.</p>
-      <p>Student will spend 16 weeks developing highly sought-after skills in cloud and server administration, and gaining career development skills to land a job upon program completion.</p>
+      <p>Tech Jobs Academy is a public-private partnership between Microsoft,
+        CUNY City Tech, and the Mayor’s Tech Talent Pipeline. This technical
+        training program targets underemployed and unemployed NYC residents who
+      are passionate about technology and ready to launch a new career in tech.</p>
+      <p>Students will spend 16 weeks developing highly sought-after skills in
+        cloud and server administration, and building career development skills
+      to help them land a job upon program completion. This pilot program will
+      serve twenty-five motivated New Yorker. Applications will be reviewed on a
+    rolling basis. Apply today.</p>
       <div class="curriculum-blurbs">
         <div class="image-blurb">
-          <img src="./images/calendar.jpg"><h3>Oct5th- Feb16th</h3>
-          <p>9AM-5PM</p>
+          <img src="./images/calendar.jpg">
+          <h3>Oct 5 - Feb 16</h3>
+          <p>9AM - 5PM</p>
         </div>
         <div class="image-blurb">
           <div class="icon">25</div>
-          <h3>Open Seats</h3>
-          <p>avialable</p>
+          <h3>open seats</h3>
+          <p>available</p>
         </div>
         <div class="image-blurb">
           <div class="icon"><span class="dollar">$</span>0</div>
           <h3>free</h3>
-          <p>Tuition</p>
+          <p>tuition</p>
         </div>
         <div class="image-blurb">
-          <img src="./images/location.jpg"><h3>Address</h3>
-          <p>300 Jay Street</p>
+          <img src="./images/location.jpg">
+          <h3>300 Jay Street</h3>
+          <p>Brooklyn, NY 11201</p>
         </div>
       </div>
       <div class="mail-signup">
