--- a/index.html
+++ b/index.html
@@ -97,20 +97,16 @@
       <h2>CURRICULUM</h2>
       <div class="curriculum-blurbs">
         <div class="image-blurb">
-          <img src="http://placehold.it/140x100"><h3>Curriculum Info 1</h3>
-          <p>Info blub</p>
+          <img src="./images/server_infra.png" id="icon_1"><h3>Design and Implement Server Infrastructure</h3>
         </div>
         <div class="image-blurb">
-          <img src="http://placehold.it/140x100"><h3>Curriculum Info 2</h3>
-          <p>Info blub</p>
+          <img src="./images/azure_icon.jpg"><h3>Build and Integrate<br>Azure Infrastructure</h3>
         </div>
         <div class="image-blurb">
-          <img src="http://placehold.it/140x100"><h3>Curriculum Info 3</h3>
-          <p>Info blub</p>
+          <img src="./images/Terminal_icon.png"><h3>Deep Dive Into<br>PowerShell 3.0</h3>
         </div>
         <div class="image-blurb">
-          <img src="http://placehold.it/140x100"><h3>Curriculum Info 4</h3>
-          <p>Info blub</p>
+          <img src="./images/fundamentals_icon.png"><h3>Windows Server Fundamentals</h3>
         </div>
         <div class="image-blurb">
           <img src="http://placehold.it/140x100"><h3>Curriculum Info 5</h3>
