--- a/index.html
+++ b/index.html
@@ -109,12 +109,10 @@
           <img src="./images/fundamentals_icon.png"><h3>Windows Server Fundamentals</h3>
         </div>
         <div class="image-blurb">
-          <img src="http://placehold.it/140x100"><h3>Curriculum Info 5</h3>
-          <p>Info blub</p>
+          <img src="./images/resume_icon.png"><h3>Prepare and Review Resumes and Cover Letters</h3>
         </div>
         <div class="image-blurb">
-          <img src="http://placehold.it/140x100"><h3>Curriculum Info 6</h3>
-          <p>Info blub</p>  
+          <img src="./images/intervew_icon.png"><h3>Technical and Cultural Interview Preparation</h3> 
         </div>
       </div>
     </section>
