--- a/index.html
+++ b/index.html
@@ -188,5 +188,14 @@
         <a href="http://www.techtalentpipeline.nyc" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
       </div>
     </footer>
+    <section class="footer" id="footer">
+       <nav>
+          <ul>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="mailto:name@email.com">Contact</a></li>
+          </ul>
+        </nav>
+    </section>
   </body>
 </html>
