fixed some working

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <img src="./images/Terminal_icon.png"><h3>Deep Dive Into<br>PowerShell 3.0</h3>
         </div>
         <div class="image-blurb">
-          <img src="./images/fundamentals_icon.png"><h3>Windows Server Fundamentals</h3>
+          <img src="./images/fundamentals_icon.png"><h3>Learn Windows Server Fundamentals</h3>
         </div>
         <div class="image-blurb">
           <img src="./images/resume_icon.png"><h3>Prepare and Review Resumes and Cover Letters</h3>
@@ -132,11 +132,11 @@
             </li>
             <li>
               <h3>Take assessment</h3>
-              <p>Learn the fundamentals of networking and take this online entrance assessment to prove your knowledge.</p>
+              <p>Learn network fundamentals and take a online entrance assessment to prove your knowledge.</p>
             </li>
             <li>
               <h3>Interview</h3>
-              <p>Selected candidates will be invited to interview for a spot in the cohort.</p>
+              <p>If Selected you will be invited to interview for a spot in the cohort.</p>
             </li>
           </ol>
         </div>
@@ -144,9 +144,10 @@
           <h3>Eligibility Requirements</h3>
           <ul>
             <li>at least 18 years old</li>
-            <li>less than $50K salary</li>
+            <li>less than $50K annual salary (individual salary)</li>
             <li>less than a 4-year degree</li>
             <li>NYC resident</li>
+            <li>eligibile to work in The U.S.</li>
             <li>meet all federal selective service requirements</li>
           </ul>
           <p>Selective service link for information about selective service</p>
