--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </li>
             <li>
               <h3>Take assessment</h3>
-              <p>Learn network fundamentals and take a online entrance assessment to prove your knowledge.</p>
+              <p>Learn network fundamentals and take an online entrance assessment to prove your knowledge.</p>
             </li>
             <li>
               <h3>Interview</h3>
@@ -144,7 +144,7 @@
           <h3>Eligibility Requirements</h3>
           <ul>
             <li>at least 18 years old</li>
-            <li>less than $50K annual salary (individual salary)</li>
+            <li>less than $50K annual salary (individual)</li>
             <li>less than a 4-year degree</li>
             <li>NYC resident</li>
             <li>eligibile to work in The U.S.</li>
