--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div id="mc_embed_signup">
           <form action="//github.us11.list-manage.com/subscribe/post?u=7b0ad64534cbb723ba1449cff&amp;id=b7740812a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-              <label for="mce-EMAIL">Sign up to get updates on Tech Jobs Academy.</label>
+              <label for="mce-EMAIL">Sign up for updates on Tech Jobs Academy.</label>
               <div id="input-box">
                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_7b0ad64534cbb723ba1449cff_b7740812a4" tabindex="-1" value=""></div>
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
@@ -112,7 +112,7 @@
           <img src="./images/resume_icon.png"><h3>Prepare and Review Resumes and Cover Letters</h3>
         </div>
         <div class="image-blurb">
-          <img src="./images/intervew_icon.png"><h3>Technical and Cultural Interview Preparation</h3> 
+          <img src="./images/intervew_icon.png"><h3>Improve Technical and Cultural Interview Skills</h3> 
         </div>
       </div>
     </section>
@@ -184,9 +184,9 @@
     <footer>
       <h2>PARTNERS</h2>
       <div class="partner-logos">
-        <a href="#" title="CUNY City Tech"><img src="./images/msr.jpg"></a>
-        <a href="#" title="Microsoft"><img src="./images/cuny.jpg"></a>
-        <a href="#" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
+        <a href="http://www.microsoft.com" title="Microsoft"><img src="./images/msr.jpg"></a>
+        <a href="http://www.citytech.cuny.edu" title="CUNY City Tech"><img src="./images/cuny.jpg"></a>
+        <a href="http://www.techtalentpipeline.nyc" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
       </div>
     </footer>
   </body>
