--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <img src="./images/Terminal_icon.png"><h3>Deep Dive Into<br>PowerShell 3.0</h3>
         </div>
         <div class="image-blurb">
-          <img src="./images/fundamentals_icon.png"><h3>Learn Windows Server Fundamentals</h3>
+          <img src="./images/fundamentals_icon.png"><h3>Learn Windows<br>Server Fundamentals</h3>
         </div>
         <div class="image-blurb">
           <img src="./images/resume_icon.png"><h3>Prepare and Review Resumes and Cover Letters</h3>
