--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hero-blurb">
           <h1>Tech Jobs Academy</h1>
           <p>An intensive, 16-week technical training program preparing
-            underemployed and unemployed NYC residents for in-demand tech jobs.</p>
+            underemployed and unemployed New Yorkers for in-demand tech jobs.</p>
           <button class="long-button"><a href="#" title="APPLY">APPLY</a></button>
         </div>
       </div>
@@ -43,8 +43,8 @@
       <p>Students will spend 16 weeks developing highly sought-after skills in
         cloud and server administration, and building career development skills
       to help them land a job upon program completion. This pilot program will
-      serve twenty-five motivated New Yorker. Applications will be reviewed on a
-    rolling basis. Apply today.</p>
+      serve twenty-five motivated New York city residents.</p><p>Applications will be reviewed on a
+    rolling basis. Apply today!</p>
       <div class="curriculum-blurbs">
         <div class="image-blurb">
           <img src="./images/calendar.jpg">
@@ -78,7 +78,7 @@
         <div id="mc_embed_signup">
           <form action="//github.us11.list-manage.com/subscribe/post?u=7b0ad64534cbb723ba1449cff&amp;id=b7740812a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-              <label for="mce-EMAIL">Sign up to get updates on Tech Jobs Academy.</label>
+              <label for="mce-EMAIL">Sign for updates on Tech Jobs Academy.</label>
               <div id="input-box">
                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_7b0ad64534cbb723ba1449cff_b7740812a4" tabindex="-1" value=""></div>
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
@@ -106,13 +106,13 @@
           <img src="./images/Terminal_icon.png"><h3>Deep Dive Into<br>PowerShell 3.0</h3>
         </div>
         <div class="image-blurb">
-          <img src="./images/fundamentals_icon.png"><h3>Windows Server Fundamentals</h3>
+          <img src="./images/fundamentals_icon.png"><h3>Learn Windows Server Fundamentals</h3>
         </div>
         <div class="image-blurb">
-          <img src="./images/resume_icon.png"><h3>Technical Resume and Cover Letter Writing</h3>
+          <img src="./images/resume_icon.png"><h3>Prepare and Review Resumes and Cover Letters</h3>
         </div>
         <div class="image-blurb">
-          <img src="./images/interview_icon.png"><h3>Interview and Company Culture Preparation</h3> 
+          <img src="./images/interview_icon.png"><h3>Improve Interview Skills</h3> 
         </div>
       </div>
     </section>
@@ -199,3 +199,4 @@
     </section>
   </body>
 </html>
+ml>
