fixes miss spelled eligible

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <li>less than $50K annual salary (individual)</li>
             <li>less than a 4-year degree</li>
             <li>NYC resident</li>
-            <li>eligibile to work in The U.S.</li>
+            <li>eligible to work in The U.S.</li>
             <li>meet all federal selective service requirements</li>
           </ul>
           <p>Selective service link for information about selective service</p>
