--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       <h2>OVERVIEW</h2>
       <p>Tech Jobs Academy is a public-private partnership between Microsoft,
         CUNY City Tech, and the Mayor’s Tech Talent Pipeline. This technical
-        training program targets underemployed and unemployed NYC residents who
+        training program targets underemployed and unemployed New Yorkers who
       are passionate about technology and ready to launch a new career in tech.</p>
       <p>Students will spend 16 weeks developing highly sought-after skills in
-        cloud and server administration, and building career development skills
+        cloud and server administration, as well as building career development skills
       to help them land a job upon program completion. This pilot program will
-      serve twenty-five motivated New York city residents.</p><p>Applications will be reviewed on a
+      serve twenty-five motivated New York City residents.</p><p>Applications will be reviewed on a
     rolling basis. Apply today!</p>
       <div class="curriculum-blurbs">
         <div class="image-blurb">
@@ -78,7 +78,7 @@
         <div id="mc_embed_signup">
           <form action="//github.us11.list-manage.com/subscribe/post?u=7b0ad64534cbb723ba1449cff&amp;id=b7740812a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-              <label for="mce-EMAIL">Sign for updates on Tech Jobs Academy.</label>
+              <label for="mce-EMAIL">Sign up for updates on Tech Jobs Academy.</label>
               <div id="input-box">
                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_7b0ad64534cbb723ba1449cff_b7740812a4" tabindex="-1" value=""></div>
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
