did the changes

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <img src="./images/resume_icon.png"><h3>Prepare and Review Resumes and Cover Letters</h3>
         </div>
         <div class="image-blurb">
-          <img src="./images/intervew_icon.png"><h3>Improve Technical and Cultural Interview Skills</h3> 
+          <img src="./images/intervew_icon.png"><h3>Improve<br>Interview Skills</h3> 
         </div>
       </div>
     </section>
@@ -136,7 +136,7 @@
             </li>
             <li>
               <h3>Interview</h3>
-              <p>If Selected you will be invited to interview for a spot in the cohort.</p>
+              <p>If selected you will be invited to interview for a spot in the cohort.</p>
             </li>
           </ol>
         </div>
@@ -147,7 +147,7 @@
             <li>less than $50K annual salary (individual)</li>
             <li>less than a 4-year degree</li>
             <li>NYC resident</li>
-            <li>eligible to work in The U.S.</li>
+            <li>legally allowed to work in the U.S.</li>
             <li>meet all federal selective service requirements</li>
           </ul>
           <p>Selective service link for information about selective service</p>
