--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </li>
             <li>
               <h3>Interview</h3>
-              <p>If selected you will be invited to interview for a spot in the cohort.</p>
+              <p>If selected, you will be invited to interview for a spot in the cohort.</p>
             </li>
           </ol>
         </div>
