footers looking ok

--- a/index.html
+++ b/index.html
@@ -183,9 +183,17 @@
     <footer>
       <h2>PARTNERS</h2>
       <div class="partner-logos">
-        <a href="http://www.microsoft.com" title="Microsoft"><img src="./images/msr.jpg"></a>
-        <a href="http://www.citytech.cuny.edu" title="CUNY City Tech"><img src="./images/cuny.jpg"></a>
-        <a href="http://www.techtalentpipeline.nyc" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
+        <div class="partner-logo">
+          <a href="http://www.microsoft.com" title="Microsoft"><img src="./images/msr.jpg"></a>
+        </div>
+        <div class="not-ms">
+          <div class="partner-logo">
+            <a href="http://www.citytech.cuny.edu" title="CUNY City Tech"><img src="./images/cuny.jpg"></a>
+          </div>
+          <div class="partner-logo">
+            <a href="http://www.techtalentpipeline.nyc" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
+          </div>
+        </div>
       </div>
     </footer>
     <section class="footer" id="footer">
