mob and nav partners sec done

--- a/index.html
+++ b/index.html
@@ -183,16 +183,16 @@
     <footer>
       <h2>PARTNERS</h2>
       <div class="partner-logos">
-        <div class="partner-logo">
-          <a href="http://www.microsoft.com" title="Microsoft"><img src="./images/msr.jpg"></a>
-        </div>
+          <div class="partner-logo" id="microsoft">
+            <a href="http://www.microsoft.com" title="Microsoft"><img src="./images/msr.jpg"></a>
+          </div> 
         <div class="not-ms">
-          <div class="partner-logo">
-            <a href="http://www.citytech.cuny.edu" title="CUNY City Tech"><img src="./images/cuny.jpg"></a>
-          </div>
-          <div class="partner-logo">
-            <a href="http://www.techtalentpipeline.nyc" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
-          </div>
+            <div class="partner-logo" id="citytech">
+              <a href="http://www.citytech.cuny.edu" title="CUNY City Tech"><img src="./images/cuny.jpg"></a>
+            </div>
+            <div class="partner-logo" id="techpipe">
+              <a href="http://www.techtalentpipeline.nyc" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
+            </div>
         </div>
       </div>
     </footer>
