--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <div class="nav-bar">
         <div class="logo">
-          <a href="#home" class="moveTo" title="TJA"><p>TJA | Tech Jobs Academy</p></a>
+          <a href="#home" class="moveTo" title="TJA"><p>TJH | Tech Jobs Academy</p></a>
         </div>
         <nav>
           <ul>
@@ -159,6 +159,10 @@
 
     <section class="key-dates" id="key-dates">
       <div class="line">
+      <div class="line-start">
+        </div>
+        <div class="line-end">
+        </div>
       </div>
       <div class="timeline">
         <h2>KEY DATES</h2>
