adds target _blank

--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
     <footer>
       <h2>PARTNERS</h2>
       <div class="partner-logos">
-        <a href="http://www.microsoft.com" title="Microsoft"><img src="./images/msr.jpg"></a>
-        <a href="http://www.citytech.cuny.edu" title="CUNY City Tech"><img src="./images/cuny.jpg"></a>
-        <a href="http://www.techtalentpipeline.nyc" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
+        <a href="http://www.microsoft.com" target="_blank" title="Microsoft"><img src="./images/msr.jpg"></a>
+        <a href="http://www.citytech.cuny.edu" target="_blank" title="CUNY City Tech"><img src="./images/cuny.jpg"></a>
+        <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
       </div>
     </footer>
     <section class="footer" id="footer">
