Styles mobile and desktop timeline

--- a/index.html
+++ b/index.html
@@ -158,28 +158,32 @@
     </section>
 
     <section class="key-dates" id="key-dates">
-      <div class="line">
-      <div class="line-start">
-        </div>
-        <div class="line-end">
-        </div>
-      </div>
+      <h2>KEY DATES</h2>
       <div class="timeline">
-        <h2>KEY DATES</h2>
+        <div class="line">
+          <div class="line-start">
+          </div>
+          <div class="line-end">
+          </div>
+        </div>
         <div class="key-date" id="dot1">
           <h3>Application Open</h3>
+          <span></span>
           <h4>JULY 24</h4>
         </div>
         <div class="key-date" id="dot2">
           <h3>Info Session</h3>
+          <span></span>
           <h4>AUGUST 8</h4>
         </div>
         <div class="key-date" id="dot3">
           <h3>Application Close</h3>
+          <span></span>
           <h4>AUGUST 28</h4>
         </div>
         <div class="key-date" id="dot4">
           <h3>Class Start</h3>
+          <span></span>
           <h4>OCTOBER 5</h4>
         </div>
       </div>
