--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
       <div class="partner-logos">
         <a href="http://www.microsoft.com" target="_blank" title="Microsoft"><img src="./images/msr.jpg"></a>
         <a href="http://www.citytech.cuny.edu" target="_blank" title="CUNY City Tech"><img src="./images/cuny.jpg"></a>
-        <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC Tech Talent Pipeline"><img src="./images/tech_pipeline.png"></a>
+        <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC
+          Tech Talent Pipeline"><img src="./images/ttp_logo.png"</a>
       </div>
     </footer>
     <section class="footer" id="footer">
