Adds selective service link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="overview" id="overview">
       <h2>OVERVIEW</h2>
       <p>Tech Jobs Academy is a public-private partnership between Microsoft,
-        CUNY City Tech, and the Mayor’s Tech Talent Pipeline. This technical
+        CUNY City Tech, and the NYC Tech Talent Pipeline. This technical
         training program targets underemployed and unemployed New Yorkers who
       are passionate about technology and ready to launch a new career in tech.</p>
       <p>Students will spend 16 weeks developing highly sought-after skills in
@@ -147,9 +147,9 @@
             <li>less than a 4-year degree</li>
             <li>NYC resident</li>
             <li>legally allowed to work in the U.S.</li>
-            <li>meet all federal selective service requirements</li>
+            <li><a href=="http://www.sss.gov/default.htm">meet all federal
+                selective service requirements</a></li>
           </ul>
-          <p>Selective service link for information about selective service</p>
           <div class="apply-button">
             <button class="long-button"><a href="#" title="APPLY">APPLY</a></button> 
           </div>
