Updates key dates

--- a/index.html
+++ b/index.html
@@ -163,20 +163,20 @@
       <div class="timeline">
         <h2>KEY DATES</h2>
         <div class="key-date" id="dot1">
-          <h3>Application Open</h3>
-          <h4>JULY 24</h4>
+          <h3>Application Opens</h3>
+          <h4>AUGUST 10</h4>
         </div>
         <div class="key-date" id="dot2">
           <h3>Info Session</h3>
-          <h4>AUGUST 8</h4>
+          <h4>AUGUST 15</h4>
         </div>
         <div class="key-date" id="dot3">
-          <h3>Application Close</h3>
+          <h3>Application Closes</h3>
           <h4>AUGUST 28</h4>
         </div>
         <div class="key-date" id="dot4">
-          <h3>Class Start</h3>
-          <h4>OCTOBER 5</h4>
+          <h3>Class Starts</h3>
+          <h4>OCTOBER 26</h4>
         </div>
       </div>
     </section>
