--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="overview" id="overview">
       <h2>OVERVIEW</h2>
       <p>Tech Jobs Academy is a public-private partnership between Microsoft,
-        CUNY City Tech, and the NYC Tech Talent Pipeline. This technical
+        New York City College of Technology/CUNY, and the NYC Tech Talent Pipeline. This technical
         training program targets underemployed and unemployed New Yorkers who
       are passionate about technology and ready to launch a new career in tech.</p>
       <p>Students will spend 16 weeks developing highly sought-after skills in
@@ -47,7 +47,7 @@
       <div class="curriculum-blurbs">
         <div class="image-blurb">
           <img src="./images/calendar.jpg">
-          <h3>Oct 5 - Feb 16</h3>
+          <h3>Oct 26 - Feb 27</h3>
           <p>9AM - 5PM</p>
         </div>
         <div class="image-blurb">
@@ -62,7 +62,7 @@
         </div>
         <div class="image-blurb">
           <img src="./images/location.jpg">
-          <h3>300 Jay Street</h3>
+          <h3>City Tech campus</h3>
           <p>Brooklyn, NY 11201</p>
         </div>
       </div>
@@ -123,19 +123,24 @@
           <ol>
             <li>
               <h3>Check your eligibility</h3>
-              <p>Do you meet the following criteria?</p>
+              <p>Do you meet our eligibility criteria? You'll be asked to
+                present proof of eligibility, so make sure you qualify.</p>
             </li>
             <li>
               <h3>Fill out application form</h3>
               <p>The application helps us get to know you better. Answer questions about your interest in technology and what gets you excited about the program.</p>
             </li>
             <li>
-              <h3>Take assessment</h3>
+              <h3>Pass tech assessment</h3>
               <p>Learn network fundamentals and take an online entrance assessment to prove your knowledge.</p>
             </li>
             <li>
               <h3>Interview</h3>
               <p>If selected, you will be invited to interview for a spot in the cohort.</p>
+            </li>
+            <li>
+              <h3>Take math and reading test</h3>
+              <p>Take an assessment to show your math and literacy proficiency.</p>
             </li>
           </ol>
         </div>
@@ -143,11 +148,11 @@
           <h3>Eligibility Requirements</h3>
           <ul>
             <li>at least 18 years old</li>
-            <li>less than $50K annual salary (individual)</li>
             <li>less than a 4-year degree</li>
             <li>NYC resident</li>
             <li>legally allowed to work in the U.S.</li>
-            <li><a href=="http://www.sss.gov/default.htm">meet all federal
+            <li>less than $50K annual salary (individual)</li>
+            <li><a href="http://www.sss.gov/default.htm" target="_blank">meet all federal
                 selective service requirements</a></li>
           </ul>
           <div class="apply-button">
@@ -184,7 +189,8 @@
       <h2>PARTNERS</h2>
       <div class="partner-logos">
         <a href="http://www.microsoft.com" target="_blank" title="Microsoft"><img src="./images/msr.jpg"></a>
-        <a href="http://www.citytech.cuny.edu" target="_blank" title="CUNY City Tech"><img src="./images/cuny.jpg"></a>
+        <a href="http://www.citytech.cuny.edu" target="_blank" title="New York
+          City College of Technology/CUNY"><img src="./images/cuny.jpg"></a>
         <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC
           Tech Talent Pipeline"><img src="./images/ttp_logo.png"</a>
       </div>
