Adds more requirements and new cuny logo

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </li>
             <li>
               <h3>Take math and reading test</h3>
-              <p>Take an assessment to show your math and literacy proficiency.</p>
+              <p>Take an assessment to show your math (11<sup>th</sup> grade level on TABE test) and reading proficiency of 10<sup>th</sup> grade (as per TABE test).</p>
             </li>
             <li>
               <h3>Interview</h3>
@@ -147,11 +147,14 @@
         <div class="eligibility">
           <h3>Eligibility Requirements</h3>
           <ul>
+            <li>High school diploma or GED</li>
             <li>at least 18 years old</li>
             <li>less than a 4-year degree</li>
             <li>NYC resident</li>
             <li>legally allowed to work in the U.S.</li>
             <li>less than $50K annual salary (individual)</li>
+            <li>Able to commit to full time training</li>
+            <li> Available for employment immediately upon graduation</li>
             <li><a href="http://www.sss.gov/default.htm" target="_blank">meet all federal
                 selective service requirements</a></li>
           </ul>
@@ -198,7 +201,7 @@
       <div class="partner-logos">
         <a href="http://www.microsoft.com" target="_blank" title="Microsoft"><img src="./images/msr.jpg"></a>
         <a href="http://www.citytech.cuny.edu" target="_blank" title="New York
-          City College of Technology/CUNY"><img src="./images/cuny.jpg"></a>
+          City College of Technology/CUNY"><img src="./images/cuny.jpg.png"></a>
         <a href="http://www.techtalentpipeline.nyc" target="_blank" title="NYC
           Tech Talent Pipeline"><img src="./images/ttp_logo.png"</a>
       </div>
