Adds editing changes, timeline dot positioning, and general styles

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="image-blurb">
           <img src="./images/location.jpg">
           <h3>City Tech campus</h3>
-          <p>Brooklyn, NY 11201</p>
+          <p>Downtown Brooklyn</p>
         </div>
       </div>
       <div class="mail-signup">
@@ -123,8 +123,7 @@
           <ol>
             <li>
               <h3>Check your eligibility</h3>
-              <p>Do you meet our eligibility criteria? You'll be asked to
-                present proof of eligibility, so make sure you qualify.</p>
+              <p>Do you meet our eligibility criteria? You'll be asked to present proof of eligibility (tax returns to verify income), so make sure you qualify.</p>
             </li>
             <li>
               <h3>Fill out application form</h3>
@@ -132,11 +131,11 @@
             </li>
             <li>
               <h3>Pass tech assessment</h3>
-              <p>Learn network fundamentals and take an online entrance assessment to prove your knowledge.</p>
+              <p>Learn network fundamentals and take an online entrance exam to prove your knowledge.</p>
             </li>
             <li>
               <h3>Take math and reading test</h3>
-              <p>Take an assessment to show your math (11<sup>th</sup> grade level on TABE test) and reading proficiency of 10<sup>th</sup> grade (as per TABE test).</p>
+              <p>Take an assessment to show your math skills (11<sup>th</sup> grade level on TABE test) and reading proficiency (10<sup>th</sup> grade level on TABE test).</p>
             </li>
             <li>
               <h3>Interview</h3>
@@ -148,15 +147,16 @@
           <h3>Eligibility Requirements</h3>
           <ul>
             <li>High school diploma or GED</li>
-            <li>at least 18 years old</li>
-            <li>less than a 4-year degree</li>
+            <li>At least 18 years old</li>
+            <li>Less than a 4-year degree</li>
+            <li>Under or unemployed *</li>
             <li>NYC resident</li>
-            <li>legally allowed to work in the U.S.</li>
-            <li>less than $50K annual salary (individual)</li>
-            <li>Able to commit to full time training</li>
-            <li> Available for employment immediately upon graduation</li>
-            <li><a href="http://www.sss.gov/default.htm" target="_blank">meet all federal
-                selective service requirements</a></li>
+            <li>Legally allowed to work in the U.S.</li>
+            <li>Able to commit to full time training (minimum 40 hours per week)</li>
+            <li>Available for employment immediately upon graduation</li>
+            <li><a href="http://www.sss.gov/default.htm" target="_blank">Meet all federal
+                selective service requirements, if applicable</a></li>
+            <p>* less than $50K annual salary (individual)</p>
           </ul>
           <div class="apply-button">
             <button class="long-button"><a href="#" title="APPLY">APPLY</a></button> 
